<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/home_navigation"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"/>


    <item android:id="@+id/hot_offer_navigation"
        android:icon="@drawable/ic_redeem_black_24dp"
        android:title="@string/hot_offer"/>


    <item android:id="@+id/my_cart_navigation"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/my_cart"/>


    <item android:id="@+id/search_navigation"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"/>


    <item android:id="@+id/profile_navigation"
        android:icon="@drawable/ic_perm_identity_black_24dp"
        android:title="@string/profile"/>

</menu>