<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomePageActivity">

    <TextView
        android:id="@+id/welcome_to_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_to"
        android:textColor="@color/black"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintBottom_toTopOf="@id/suncity_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/suncity_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/argosregular"
        android:gravity="end|center_vertical"
        android:text="@string/suncity"
        android:textColor="@color/blue"
        android:textSize="@dimen/extra_large_text_size"
        app:layout_constraintBottom_toTopOf="@id/welcome_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/mart_text"
        app:layout_constraintTop_toBottomOf="@id/welcome_to_text" />


    <TextView
        android:id="@+id/mart_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/argosregular"
        android:gravity="start|center_vertical"
        android:text="@string/mart"
        android:textColor="@color/black"
        android:textSize="@dimen/extra_large_text_size"
        app:layout_constraintBottom_toTopOf="@id/welcome_image"
        app:layout_constraintLeft_toRightOf="@id/suncity_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_to_text" />

    <ImageView
        android:id="@+id/welcome_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/image"
        app:layout_constraintBottom_toTopOf="@id/sign_in_button"
        app:layout_constraintHeight_percent="0.63"
        app:layout_constraintDimensionRatio="1:1"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mart_text" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/button_layout"
        android:backgroundTint="@color/blue"
        android:text="@string/sign_in"
        android:textSize="@dimen/medium_text_size"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/sign_up_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_image" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/button_layout"
        android:backgroundTint="@color/blue"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toTopOf="@id/google_log_in_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_button" />

    <Button
        android:id="@+id/google_log_in_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:textSize="@dimen/medium_text_size"
        android:background="@drawable/button_layout"
        android:text="@string/google"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/facebook_log_in_button"
        app:layout_constraintTop_toBottomOf="@id/sign_up_button" />

    <Button
        android:id="@+id/facebook_log_in_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/button_layout"
        android:text="@string/facebook"
        android:textSize="@dimen/medium_text_size"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/google_log_in_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_button" />

</android.support.constraint.ConstraintLayout>