<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="8dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="8dp">

            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintHeight_percent="0.8"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/suncity_text"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/argosregular"
                android:gravity="center"
                android:text="@string/suncity"
                android:textColor="@color/blue"
                android:textSize="@dimen/large_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/image_logo"
                app:layout_constraintRight_toLeftOf="@id/mart_text"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/mart_text"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:fontFamily="@font/argosregular"
                android:gravity="center"
                android:text="@string/mart"
                android:textColor="@color/black"
                android:textSize="@dimen/large_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/suncity_text"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/skip_text"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginHorizontal="10dp"
                android:gravity="center|end"
                android:text="@string/skip"
                android:onClick="skip"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

</android.support.constraint.ConstraintLayout>