<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GettingStartedFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/getting_started_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/welcome_image"
            app:layout_constraintTop_toTopOf="parent"
            android:adjustViewBounds="true"
            app:layout_constraintHeight_percent="0.64"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_layout"/>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/text_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/getting_started_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/welcome_to"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="0.5"
                android:text="@string/welcome_to"
                android:textSize="@dimen/extra_large_text_size"
                android:gravity="end"
                android:textColor="@color/black"
                android:paddingRight="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/suncity_mart" />

            <TextView
                android:id="@+id/suncity_mart"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.5"
                android:text="@string/shop_mart"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/extra_large_text_size"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/welcome_to"
                android:layout_height="wrap_content"
                />

            <View
                android:id="@+id/green_line"
                android:layout_width="65dp"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.02"
                android:background="@color/green"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/suncity_mart"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">
            </View>

            <TextView
                android:id="@+id/line_text"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="5dp"
                app:layout_constraintTop_toBottomOf="@id/green_line"
                android:text="@string/started_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/get_started"
                android:textSize="@dimen/large_text_size"
                android:gravity="center"/>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/get_started"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <Button
                    android:id="@+id/get_started_button"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/large_text_size"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:background="@color/blue"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/get_started"/>

            </android.support.constraint.ConstraintLayout>


        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>