<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SplashActivity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/splash_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/splash_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.45"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/logo"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintBottom_toTopOf="@id/mart_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/mart_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorPrimary"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo_image"
            >

            <TextView
                android:id="@+id/suncity_text"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/suncity"
                android:textColor="@color/white"
                android:gravity="end|center_vertical"
                android:fontFamily="@font/argosregular"
                android:textSize="@dimen/medium_text_size"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/mart_text"/>


            <TextView
                android:id="@+id/mart_text"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:text="@string/mart"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text_size"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/argosregular"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/suncity_text"
                app:layout_constraintRight_toRightOf="parent"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/powered_by"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/white"
        android:textSize="@dimen/small_text_size"/>

</android.support.constraint.ConstraintLayout>