<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <include
        android:id="@+id/toolbar_sign_in"
        layout="@layout/skip_toolbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/signin_text"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signin_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal|bottom"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="@dimen/extra_large_text_size"
        app:layout_constraintBottom_toTopOf="@id/edit_email_id"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_sign_in" />

    <ImageView
        android:id="@+id/email_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:src="@drawable/ic_email_black_24dp"
        app:layout_constraintBottom_toTopOf="@id/edit_email_id"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/edit_email_id"
        app:layout_constraintTop_toBottomOf="@id/edit_email_id"
        app:layout_constraintWidth_percent="0.14" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_email_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/edit_password_id"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintLeft_toRightOf="@id/email_image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signin_text">

        <EditText
            android:id="@+id/email_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Email"
            android:textColorLink="@color/blue"
            android:textColor="@color/blue"
            android:textColorHint="@color/black"
            android:textSize="@dimen/medium_text_size"/>

    </android.support.design.widget.TextInputLayout>

   <ImageView
        android:id="@+id/password_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:src="@drawable/ic_lock_outline_black_24dp"
        app:layout_constraintBottom_toTopOf="@id/edit_password_id"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/edit_password_id"
        app:layout_constraintTop_toBottomOf="@id/edit_password_id"
        app:layout_constraintWidth_percent="0.14" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_password_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/login_button"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintLeft_toRightOf="@id/password_image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signin_text" >


        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColor="@color/blue"
            android:textColorHint="@color/black"
            android:textSize="@dimen/medium_text_size"
            />

    </android.support.design.widget.TextInputLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:paddingTop="5dp"
        android:text="@string/forget_id"
        android:textColor="@color/black"
        android:textSize="@dimen/small_text_size"
        android:onClick="forgotPassword"
        android:paddingRight="15dp"
        app:layout_constraintBottom_toTopOf="@id/login_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_password_id" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/button_layout"
        android:backgroundTint="@color/blue"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.09"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_password_id" />
</android.support.constraint.ConstraintLayout>